adapted more descriptive swagger doc, removed test case
